site/app/stylesheets/site.scss
/* ... */
@media (max-width: 480px) {
  body.simple .form-actions {
    padding-left: 0;
  }
}

/* Overview specific styles */
.overview {
  ol li {
    margin-bottom: 10px;
  }

  #intro {
    text-align: justify;
    img {
      float: right;
      margin: -20px 40px 0;
    }
  }
  
  #scale {
    text-align: justify;
    img {
      float: right;
      margin: 0px 20px 20px 40px;
    }
  }

  #arch { 
    clear: both;
  }
}

/* Outage notification */
#outage_notification {
  background: $ribbonFoldColor;
  color: white;

  h2 {
    color: inherit;
    font-size: 16px;
    line-height: 16px;
    padding: 11px 0;
  }
  pre {
    background: inherit;
    color: inherit;
    border: none;
    font-family: $baseFontFamily;
    padding: 10px 0;
  }
/*
  #outage_toggle {
    display: inline-block;
    position: absolute;
    bottom: -24px;
    left: 0;
    background: inherit;
    font-size: 14px;
    font-weight: bold;
    padding: 5px 15px;

    &:active {
      outline: none;
      border: none;
    }
  }
*/
}
@media (max-width: 767px) {
  #outage_notification {
    width: 100%;
    h2 {
      display: none;
    }
    pre {
      margin: 0 auto;
      width: 100%;
    }
  }
}

